--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
+        android:background="@color/white"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
@@ -69,7 +70,7 @@
                 <TextView
                     android:id="@+id/labelQueue"
                     android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_50sdp"
                     android:text="@string/queue"
                    style="@style/mid_text_style"
                     app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +79,7 @@
                 <TextView
                     android:id="@+id/labelCompletedCalls"
                     android:layout_marginStart="@dimen/_50sdp"
-                    android:layout_marginTop="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_50sdp"
                     android:text="@string/completed_calls"
                     style="@style/mid_text_style"
                     app:layout_constraintEnd_toStartOf="@id/labelPendingCalls"
@@ -88,7 +89,7 @@
                 <TextView
                     android:id="@+id/labelPendingCalls"
                     android:layout_marginStart="@dimen/_30sdp"
-                    android:layout_marginTop="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_50sdp"
                     android:text="@string/pending_calls"
                     style="@style/mid_text_style"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +107,7 @@
                 <TextView
                     android:id="@+id/labelMarketing"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:text="@string/marketing"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/viewBorder1" />
@@ -114,7 +115,7 @@
                 <TextView
                     android:id="@+id/txtMarketingCompletedCalls"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_50sdp"
                     android:text="45"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +126,7 @@
                 <TextView
                     android:id="@+id/txtMarketingPendingCalls"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_30sdp"
                     android:text="25"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +136,7 @@
                 <View
                     android:id="@+id/viewBorder2"
                     style="@style/viewBorderStyle"
-                    android:layout_marginTop="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/labelMarketing" />
@@ -143,7 +144,7 @@
                 <TextView
                     android:id="@+id/labelCollection"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:text="@string/collection"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/viewBorder2" />
@@ -151,7 +152,7 @@
                 <TextView
                     android:id="@+id/txtCollectionCompletedCalls"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_50sdp"
                     android:text="0"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -162,7 +163,7 @@
                 <TextView
                     android:id="@+id/txtCollectionPendingCalls"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_30sdp"
                     android:text="45"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +172,7 @@
                 <View
                     android:id="@+id/viewBorder3"
                     style="@style/viewBorderStyle"
-                    android:layout_marginTop="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/labelCollection" />
@@ -179,7 +180,7 @@
                 <TextView
                     android:id="@+id/labelWelcomeCall"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:text="@string/welcome_call"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/viewBorder3" />
@@ -187,7 +188,7 @@
                 <TextView
                     android:id="@+id/txtWelcomeCompletedCalls"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_50sdp"
                     android:text="45"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -198,7 +199,7 @@
                 <TextView
                     android:id="@+id/txtWelcomePendingCalls"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_30sdp"
                     android:text="45"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -207,7 +208,7 @@
                 <View
                     android:id="@+id/viewBorder4"
                     style="@style/viewBorderStyle"
-                    android:layout_marginTop="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/labelWelcomeCall" />
@@ -216,7 +217,7 @@
                 <TextView
                     android:id="@+id/labelRenewal"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:text="@string/renewal"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/viewBorder4" />
@@ -224,7 +225,7 @@
                 <TextView
                     android:id="@+id/txtRenewalCompletedCalls"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_50sdp"
                     android:text="45"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -235,7 +236,7 @@
                 <TextView
                     android:id="@+id/txtRenewalPendingCalls"
                     style="@style/common_text_style"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:layout_marginEnd="@dimen/_30sdp"
                     android:text="45"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -245,7 +246,7 @@
                 <View
                     android:id="@+id/viewBorder5"
                     style="@style/viewBorderStyle"
-                    android:layout_marginTop="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/labelRenewal" />
