--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,9 +8,9 @@
     </style>
 
     <style name="common_text_style">
-        <item name="android:textSize">@dimen/_10ssp</item>
+        <item name="android:textSize">@dimen/_12ssp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
@@ -28,7 +28,7 @@
     </style>
 
     <style name="mid_text_style">
-        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
         <item name="android:textColor">@color/textBlue</item>
         <item name="android:textStyle">bold</item>
         <item name="textAllCaps">true</item>
