--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -42,6 +42,35 @@
         <item name="android:background">@color/borderColor</item>
     </style>
 
+   <style name="editTextStyle">
+       <item name="android:layout_marginStart">@dimen/_10sdp</item>
+       <item name="android:layout_marginEnd">@dimen/_10sdp</item>
+       <item name="hintTextColor">@color/borderColor</item>
+       <item name="android:layout_width">match_parent</item>
+       <item name="android:layout_height">wrap_content</item>
+       <item name="android:textSize">@dimen/_14ssp</item>
+       <item name="android:textColor">@color/black</item>
+   </style>
+
+    <style name="ButtonStyle">
+        <item name="android:layout_marginStart">@dimen/_30sdp</item>
+        <item name="android:layout_marginEnd">@dimen/_30sdp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/_40sdp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="textAllCaps">false</item>
+        <item name="backgroundTint">@color/textBlue</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
+    <style name="MainConstraintStyle">
+       <item name="android:background">@color/white</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
 
 
 </resources>
