--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,15 @@
                     app:layout_constraintStart_toEndOf="@id/ivCallLogo"
                     app:layout_constraintTop_toTopOf="@id/ivCallLogo" />
 
-                <EditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/inputLayoutId"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintEnabled="true"
+                    android:textColorHint="@color/borderColor"
+                    app:layout_constraintTop_toBottomOf="@id/ivCallLogo">
+
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edtUserID"
                     style="@style/editTextStyle"
                     android:layout_marginTop="@dimen/_100sdp"
@@ -59,14 +67,28 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/ivCallLogo" />
 
-                <EditText
-                    android:id="@+id/edtUserPassword"
-                    style="@style/editTextStyle"
-                    android:layout_marginTop="@dimen/_15sdp"
-                    android:hint="@string/enter_password"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtUserID" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/inputLayoutPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintEnabled="true"
+                    android:textColorHint="@color/borderColor"
+                    app:layout_constraintTop_toBottomOf="@id/inputLayoutId">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edtUserPassword"
+                        style="@style/editTextStyle"
+                        android:layout_marginTop="@dimen/_15sdp"
+                        android:hint="@string/enter_password"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/edtUserID" />
+
+
+                </com.google.android.material.textfield.TextInputLayout>
+
 
 
                 <com.google.android.material.button.MaterialButton
@@ -76,7 +98,7 @@
                     android:text="@string/login"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtUserPassword" />
+                    app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword" />
 
                 <TextView
                     android:id="@+id/labelForgotPassword"
@@ -97,7 +119,7 @@
                     android:layout_marginEnd="@dimen/_50sdp"
                     android:text="@string/first_time_user"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
+                    android:textSize="@dimen/_12ssp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/labelForgotPassword" />
@@ -110,7 +132,7 @@
                     android:layout_marginEnd="@dimen/_30sdp"
                     android:text="@string/sign_up"
                     android:textColor="@color/textBlue"
-                    android:textSize="@dimen/_14ssp"
+                    android:textSize="@dimen/_12ssp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@id/labelForgotPassword"
                     app:layout_constraintStart_toEndOf="@id/labelDontHaveAccount"
