--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -43,6 +43,7 @@
     </style>
 
    <style name="editTextStyle">
+       <item name="android:fontFamily">sans-serif</item>
        <item name="android:layout_marginStart">@dimen/_10sdp</item>
        <item name="android:layout_marginEnd">@dimen/_10sdp</item>
        <item name="hintTextColor">@color/borderColor</item>
@@ -50,6 +51,7 @@
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textSize">@dimen/_14ssp</item>
        <item name="android:textColor">@color/black</item>
+       <item name="android:background">@color/white</item>
    </style>
 
     <style name="ButtonStyle">
