--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -22,6 +22,8 @@
 
 
     <style name="heading_text_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/_16ssp</item>
         <item name="android:textColor">@color/textBlue</item>
         <item name="android:textStyle">bold</item>
@@ -42,6 +44,14 @@
         <item name="android:background">@color/borderColor</item>
     </style>
 
+    <style name="text_input_layout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="hintEnabled">true</item>
+        <item name="android:textColorHint">@color/borderColor</item>
+    </style>
+
+
    <style name="editTextStyle">
        <item name="android:fontFamily">sans-serif</item>
        <item name="android:layout_marginStart">@dimen/_10sdp</item>
@@ -60,7 +70,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/_40sdp</item>
         <item name="android:textAlignment">center</item>
-        <item name="textAllCaps">false</item>
+        <item name="textAllCaps">true</item>
         <item name="backgroundTint">@color/textBlue</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/_14ssp</item>
