--- a/app/src/main/res/layout/activity_success.xml
+++ b/app/src/main/res/layout/activity_success.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/MainConstraintStyle"
     tools:context=".SuccessActivity">
 
+    <TextView
+        android:id="@+id/labelSuccess"
+        android:text="@string/registration_successful"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/_80sdp"
+        android:textColor="@color/black"
+       style="@style/heading_text_style"/>
+
+    <TextView
+        android:id="@+id/txtLink"
+        android:text="@string/generate_mpin"
+        app:layout_constraintTop_toBottomOf="@id/labelSuccess"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/_50sdp"
+        style="@style/heading_text_style"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
