--- a/app/src/main/res/layout/activity_register_password.xml
+++ b/app/src/main/res/layout/activity_register_password.xml
@@ -27,7 +27,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputLayoutDefaultPassword"
                     style="@style/text_input_layout"
-                    android:layout_marginTop="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_80sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -45,7 +45,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputLayoutSetPassword"
                     style="@style/text_input_layout"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_25sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/inputLayoutDefaultPassword">
@@ -65,6 +65,7 @@
                     android:textColor="@color/textRed"
                     app:layout_constraintEnd_toEndOf="@id/inputLayoutSetPassword"
                     style="@style/common_text_style"
+                    android:textSize="@dimen/_11ssp"
                     android:layout_marginTop="@dimen/_10sdp"
                     app:layout_constraintStart_toStartOf="@id/inputLayoutSetPassword"
                     app:layout_constraintTop_toBottomOf="@id/inputLayoutSetPassword" />
@@ -73,7 +74,7 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/inputLayoutConfirmPassword"
                     style="@style/text_input_layout"
-                    android:layout_marginTop="@dimen/_15sdp"
+                    android:layout_marginTop="@dimen/_25sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/labelPasswordNote">
