--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -61,7 +61,7 @@
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textSize">@dimen/_14ssp</item>
        <item name="android:textColor">@color/black</item>
-       <item name="android:background">@color/white</item>
+       <item name="android:backgroundTint">@color/white</item>
    </style>
 
     <style name="ButtonStyle">
