--- a/app/src/main/res/layout/activity_success.xml
+++ b/app/src/main/res/layout/activity_success.xml
@@ -18,6 +18,7 @@
         android:textColor="@color/black"
        style="@style/heading_text_style"/>
 
+    <!--This link is underlined programmatically-->
     <TextView
         android:id="@+id/txtLink"
         android:text="@string/generate_mpin"
