--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -61,7 +61,8 @@
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textSize">@dimen/_14ssp</item>
        <item name="android:textColor">@color/black</item>
-       <item name="android:backgroundTint">@color/white</item>
+
+       <item name="android:background">@drawable/edit_text_bottom_border</item>
    </style>
 
     <style name="ButtonStyle">
@@ -72,6 +73,7 @@
         <item name="android:textAlignment">center</item>
         <item name="textAllCaps">true</item>
         <item name="backgroundTint">@color/textBlue</item>
+        <item name="cornerRadius">@dimen/_10sdp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/_14ssp</item>
         <item name="android:textColor">@color/white</item>
