--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,7 +88,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edtUserPassword"
                         style="@style/editTextStyle"
-                        android:inputType="numberPassword"
+                        android:inputType="text"
                         android:hint="@string/enter_password"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
