password note changed from bold to normal, Login activity , OTP activity , RegisterPassword activity Custom Text Watcher added to disable error message while editText is focused

--- a/app/src/main/res/layout/activity_register_password.xml
+++ b/app/src/main/res/layout/activity_register_password.xml
@@ -72,6 +72,7 @@
                     android:textColor="@color/textRed"
                     app:layout_constraintEnd_toEndOf="@id/inputLayoutSetPassword"
                     style="@style/common_text_style"
+                    android:textStyle="normal"
                     android:textSize="@dimen/_11ssp"
                     android:layout_marginTop="@dimen/_10sdp"
                     app:layout_constraintStart_toStartOf="@id/inputLayoutSetPassword"
