button text textAllCaps false, and text style changes

--- a/app/src/main/res/layout/activity_login_with_mpin.xml
+++ b/app/src/main/res/layout/activity_login_with_mpin.xml
@@ -10,6 +10,7 @@
 
     <TextView
         android:text="@string/enter_mpin"
+        android:textStyle="normal"
         style="@style/heading_text_style"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/_80sdp"
