--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -71,7 +71,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/_40sdp</item>
         <item name="android:textAlignment">center</item>
-        <item name="textAllCaps">true</item>
+        <item name="textAllCaps">false</item>
         <item name="backgroundTint">@color/textBlue</item>
         <item name="cornerRadius">@dimen/_10sdp</item>
         <item name="android:textStyle">bold</item>
