--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -74,7 +74,7 @@
         <item name="textAllCaps">false</item>
         <item name="backgroundTint">@color/textBlue</item>
         <item name="cornerRadius">@dimen/_10sdp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textStyle">normal</item>
         <item name="android:textSize">@dimen/_14ssp</item>
         <item name="android:textColor">@color/white</item>
     </style>
